--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% endblock %} 
 {% block content %}
 <div class="credentials">
-    <form>
+    <form id="login-form">
         <label for="username">Nome de usuário</label>
         <br>
         <input class="login-label"
@@ -30,5 +30,6 @@
 </div>
 {% endblock %}
 {% block scripts %}
-<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/login.js') }}"></script>
 {% endblock %}
