--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
     {% endblock %}
 </head>
 <body>
+    <header>
+        <button onclick="window.location.href='/'"> Página Inicial </button>
+    </header>
     {% block content %}{% endblock %}
     <footer>
         <p>Footer</p>
