--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,9 @@
     <link href="{{ url_for('static', filename='styles/index.css') }}" rel="stylesheet">
 {% endblock %} 
 {% block content %}
-    <h1>Index</h1>
+    <h1>BrazSpeechData</h1>
+    <div>
+        <button class="index-button" onclick="window.location.href='/xab'"> Teste XAB </button>
+        <button class="index-button" onclick="window.location.href='/mos'"> Teste MOS </button>
+    </div>
 {% endblock %}
