--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% endblock %} 
 {% block content %}
     <h1>BrazSpeechData</h1>
-    <div>
+    <div id="button-container">
         <button class="index-button" onclick="window.location.href='/xab'"> Teste XAB </button>
         <button class="index-button" onclick="window.location.href='/mos'"> Teste MOS </button>
     </div>
