--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,5 +1,14 @@
+header {
+    background-color: grey;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 footer {
     background-color: #00e5ff;
     padding: 20px;
     text-align: center;
+    margin-top: 50px;
 }
