--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,3 +1,16 @@
-p {
-    color: red;
+h1 {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+#button-container {
+    text-align: center;
+}
+
+#button-container button {
+    font-size: large;
+    min-height: 200px;
+    min-width: 200px;
+    margin: 50px
 }
