--- a/static/styles/mos.css
+++ b/static/styles/mos.css
@@ -1,3 +1,29 @@
 .grade {
+    margin: 10px;
     display: inline-block;
+}
+
+.grade label input {
+    min-height: 30px;
+    min-width: 30px;
+}
+
+#audio-number {
+    text-align: center;
+}
+
+#audio-container {
+    text-align: center;
+}
+
+#grade-container {
+    text-align: center;
+}
+
+#explanation {
+    margin-left: 200px;
+}
+
+#button-container {
+    text-align: center;
 }
