--- a/templates/mos.html
+++ b/templates/mos.html
@@ -4,14 +4,14 @@
 {% block content %}
 
 <div id="audio-number">
-    <h1> Áudio 1 de 100</h1>
+    <h1> Áudio {{ mos_number }} de {{ mos_total }}</h1>
 </div>
 
 <div id="audio-container">
     <h2>Áudio de Referência</h2>
 
     <audio id="audio" controls>
-      <source src="{{ url_for('static', filename=audio_file) }}" type="audio/wav" media="(min-width: 900px)"
+      <source src="{{ audio_file }}" type="audio/wav" media="(min-width: 900px)"
         preload />
     </audio>
 </div>
@@ -53,18 +53,21 @@
             <input type="radio" class="radio-answer" id="5" name="radio-group">
         </label>
     </div>  
+</div>
 
-    <div id="explanation">
-        <p> 1 = Completamente não natural </p>
-        <p> 2 = Majoritariamente não natural </p>
-        <p> 3 = Neutro </p>
-        <p> 4 = Majoritariamente natural </p>
-        <p> 5 = Completamente natural </p>
-    </div>
+<div id="explanation">
+    <p> 1 = Completamente não natural </p>
+    <p> 2 = Majoritariamente não natural </p>
+    <p> 3 = Neutro </p>
+    <p> 4 = Majoritariamente natural </p>
+    <p> 5 = Completamente natural </p>
 </div>
 
 <div id="button-container">
-    <button id="send-button" class="button" onclick=""> Enviar </button>
+    <button id="send-button" class="button" type="submit"> Enviar </button>
 </div>
 
+{% endblock %}
+{% block scripts %}
+<script type="module" src="{{ url_for('static', filename='scripts/mos.js') }}"></script>
 {% endblock %}
