--- a/templates/xab.html
+++ b/templates/xab.html
@@ -4,14 +4,14 @@
 {% block content %}
 
 <div id="audio-number">
-    <h1> Áudio 1 de 100</h1>
+    <h1> Áudio {{ xab_number }} de {{ xab_total }}</h1>
 </div>
 
 <div id="audio-container-x">
     <h2>Áudio de Referência</h2>
 
     <audio id="audio-x" controls>
-      <source src="{{ url_for('static', filename=audio_file_x) }}" type="audio/wav" media="(min-width: 900px)"
+      <source src="{{ audio_file_x }}" type="audio/wav" media="(min-width: 900px)"
         preload />
     </audio>
 </div>
@@ -22,7 +22,7 @@
         <h2>Áudio A</h2>
 
         <audio id="audio-a" controls>
-        <source src="{{ url_for('static', filename=audio_file_a) }}" type="audio/wav" media="(min-width: 900px)"
+        <source src="{{ audio_file_a }}" type="audio/wav" media="(min-width: 900px)"
             preload />
         </audio>
     </div>
@@ -31,7 +31,7 @@
         <h2>Áudio B</h2>
 
         <audio id="audio-b" controls>
-        <source src="{{ url_for('static', filename=audio_file_b) }}" type="audio/wav" media="(min-width: 900px)"
+        <source src="{{ audio_file_b }}" type="audio/wav" media="(min-width: 900px)"
             preload />
         </audio>
     </div>
@@ -57,4 +57,7 @@
         <button id="send-button" class="button" onclick=""> Enviar </button>
     </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script type="module" src="{{ url_for('static', filename='scripts/xab.js') }}"></script>
 {% endblock %}
