--- a/BrazSpeech_AB_Test/templates/base.html
+++ b/BrazSpeech_AB_Test/templates/base.html
@@ -14,7 +14,16 @@
     </header>
     {% block content %}{% endblock %}
     <footer>
-        <p>Footer</p>
+        <img src="../static/images/logo_inova_colorido.png">
+        <img src="../static/images/logo_ibm_semfundo.png">
+        <img src="../static/images/logo_fapesp_semfundo.png">
+        <img src="../static/images/logo_ia_thumb.png">
+        <img src="../static/images/logo_usp_escrito_semfundo.png">
+        <img src="../static/images/logo_ceia_semfundo.png">
+        <img src="../static/images/logo_ufg.png">
+        <img src="../static/images/logo_motorola.png">
+        <img src="../static/images/logo_mctifuturo.png">
+        <img src="../static/images/logo_softex.png">
     </footer>
 </body>
 </html>
