--- a/BrazSpeech_AB_Test/templates/xab.html
+++ b/BrazSpeech_AB_Test/templates/xab.html
@@ -10,7 +10,7 @@
 <div id="audio-container-x">
     <h2>Áudio de Referência</h2>
 
-    <audio id="audio-x" controls>
+    <audio id="audio-x" title="audio-x" controls>
       <source src="{{ audio_file_x }}" type="audio/wav" media="(min-width: 900px)"
         preload />
     </audio>
@@ -21,7 +21,7 @@
     <div id="audio-container-a">
         <h2>Áudio A</h2>
 
-        <audio id="audio-a" controls>
+        <audio id="audio-a" title="audio-a" controls>
         <source src="{{ audio_file_a }}" type="audio/wav" media="(min-width: 900px)"
             preload />
         </audio>
@@ -30,7 +30,7 @@
     <div id="audio-container-b">
         <h2>Áudio B</h2>
 
-        <audio id="audio-b" controls>
+        <audio id="audio-b" title="audio-b" controls>
         <source src="{{ audio_file_b }}" type="audio/wav" media="(min-width: 900px)"
             preload />
         </audio>
@@ -59,5 +59,12 @@
 </div>
 {% endblock %}
 {% block scripts %}
-<script type="module" src="{{ url_for('static', filename='scripts/xab.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/xab.js') }}"></script>]
+<script>
+    const audio_x = document.getElementById('audio-x');
+    const audio_a = document.getElementById('audio-a');
+    const audio_b = document.getElementById('audio-b');
+
+    
+</script>
 {% endblock %}
