added credits and xab instructions

--- a/BrazSpeech_AB_Test/templates/index.html
+++ b/BrazSpeech_AB_Test/templates/index.html
@@ -2,9 +2,9 @@
     <link href="{{ url_for('static', filename='styles/index.css') }}" rel="stylesheet">
 {% endblock %} 
 {% block content %}
-    <h1>BrazSpeechData</h1>
+    <h1> BrazSpeech: Subj-EvAudio </h1>
     <div id="button-container">
-        <button class="index-button" onclick="window.location.href='/xab'"> Teste XAB </button>
-        <button class="index-button" onclick="window.location.href='/mos'"> Teste MOS </button>
+        <button class="index-button" onclick="window.location.href='/xab-instructions'"> Teste XAB </button>
+        <button class="index-button" id="mos-button"> Teste MOS </button>
     </div>
 {% endblock %}
