--- a/BrazSpeech_AB_Test/templates/base.html
+++ b/BrazSpeech_AB_Test/templates/base.html
@@ -11,6 +11,8 @@
 <body>
     <header>
         <button onclick="window.location.href='/'"> Página Inicial </button>
+        <button onclick="window.location.href='/login'"> Login </button>
+        <button onclick="window.location.href='/creditos'"> Créditos </button>
     </header>
     {% block content %}{% endblock %}
     <footer>
